preprocessor.output
State 0 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: ppList

    2 ppList: pp
    3       | ppList pp
    4       | %empty

    5 pp: PRE_HASHTAG PRE_INCLUDE arg

    6 arg: PRE_LEFTANG PRE_ID PRE_RIGHTANG
    7    | PRE_STRING


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PRE_ID <sval> (258) 6
    PRE_STRING <sval> (259) 7
    PRE_HASHTAG (260) 5
    PRE_RIGHTANG (261) 6
    PRE_LEFTANG (262) 6
    PRE_INCLUDE (263) 5


Nonterminals, with rules where they appear

    $accept (9)
        on left: 0
    program (10)
        on left: 1
        on right: 0
    ppList <ppListVal> (11)
        on left: 2 3 4
        on right: 1 3
    pp <ppVal> (12)
        on left: 5
        on right: 2 3
    arg <argVal> (13)
        on left: 6 7
        on right: 5


State 0

    0 $accept: . program $end

    PRE_HASHTAG  shift, and go to state 1

    PRE_HASHTAG  [reduce using rule 4 (ppList)]
    $default     reduce using rule 4 (ppList)

    program  go to state 2
    ppList   go to state 3
    pp       go to state 4


State 1

    5 pp: PRE_HASHTAG . PRE_INCLUDE arg

    PRE_INCLUDE  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: ppList .
    3 ppList: ppList . pp

    PRE_HASHTAG  shift, and go to state 1

    $default  reduce using rule 1 (program)

    pp  go to state 7


State 4

    2 ppList: pp .

    $default  reduce using rule 2 (ppList)


State 5

    5 pp: PRE_HASHTAG PRE_INCLUDE . arg

    PRE_STRING   shift, and go to state 8
    PRE_LEFTANG  shift, and go to state 9

    arg  go to state 10


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 ppList: ppList pp .

    $default  reduce using rule 3 (ppList)


State 8

    7 arg: PRE_STRING .

    $default  reduce using rule 7 (arg)


State 9

    6 arg: PRE_LEFTANG . PRE_ID PRE_RIGHTANG

    PRE_ID  shift, and go to state 11


State 10

    5 pp: PRE_HASHTAG PRE_INCLUDE arg .

    $default  reduce using rule 5 (pp)


State 11

    6 arg: PRE_LEFTANG PRE_ID . PRE_RIGHTANG

    PRE_RIGHTANG  shift, and go to state 12


State 12

    6 arg: PRE_LEFTANG PRE_ID PRE_RIGHTANG .

    $default  reduce using rule 6 (arg)
